--- a/Contact.html
+++ b/Contact.html
@@ -94,8 +94,8 @@
   <h2>ChunGroups</h2>
   <nav>
     <a href="NewIndex.html">หน้าแรก</a>
-    <a href="about.html">เกี่ยวกับเรา</a>
-    <a href="contact.html">ติดต่อเรา</a>
+    <a href="About.html">เกี่ยวกับเรา</a>
+    <a href="Contact.html">ติดต่อเรา</a>
     <a href="News_and_Update.html">ข่าวสาร</a>
     <a href="Work_with_Chun.html">ร่วมงานกับเรา</a>
   </nav>
