--- a/NewIndex.html
+++ b/NewIndex.html
@@ -145,7 +145,7 @@
   <header>
     <h2>ChunGroups</h2>
     <nav>
-      <a href="index.html">หน้าแรก</a>
+      <a href="NewIndex.html">หน้าแรก</a>
       <a href="about.html">เกี่ยวกับเรา</a>
       <a href="contact.html">ติดต่อเรา</a>
       <a href="News_and_Update.html">ข่าวสาร</a>
