--- a/Contact.html
+++ b/Contact.html
@@ -153,7 +153,7 @@
       </select>
     </div>
 
-    <button type="submit">ส่งข้อความ</button>
+    <button type="submit">ดูข้อมูล</button>
   </form>
 </section>
 
