--- a/Contact.html
+++ b/Contact.html
@@ -182,12 +182,12 @@
   });
 
   const contactData = {
-    "ชุณห์กิจพัฒนา": "โทร: 036-111-1111<br>อีเมล: dev@chun1.com",
-    "ชุณห์กิจคอนสตรัคชั่น ซัพพลาย": "โทร: 036-222-2222<br>อีเมล: supply@chun2.com",
-    "ชุณห์ไฟว์ฟลอริชส์": "โทร: 036-333-3333<br>อีเมล: five@chun3.com",
-    "ชุณห์กิจ อะหลั่ย": "โทร: 036-444-4444<br>อีเมล: part@chun4.com",
-    "ชุณห์สมายล์โลจิสติกส์": "โทร: 036-555-5555<br>อีเมล: logistic@chun5.com",
-    "ห้างทองนริศรา": "โทร: 036-666-6666<br>อีเมล: narisara.gold@hotmail.com"
+    "ชุณห์กิจพัฒนา": "โทร: 036-200-929<br>อีเมล: chunkit_group@hotmail.com",
+    "ชุณห์กิจคอนสตรัคชั่น ซัพพลาย": "โทร:  036-200-929<br>อีเมล: chunkit_group@hotmail.com",
+    "ชุณห์ไฟว์ฟลอริชส์": "โทร: 053-552-547<br>อีเมล: p.chun9@hotmail.com",
+    "ชุณห์กิจ อะหลั่ย": "โทร: 036-200-929<br>อีเมล: chunkit_group@hotmail.com",
+    "ชุณห์สมายล์โลจิสติกส์": "โทร:  036-200-929<br>อีเมล: chunkit_group@hotmail.com",
+    "ห้างทองนริศรา": "โทร: 064-945-5359<br>อีเมล: narisara.gold@hotmail.com"
   };
 
   document.getElementById("contactForm").addEventListener("submit", function (e) {
