--- a/About.html
+++ b/About.html
@@ -62,6 +62,7 @@
       padding: 1.5rem;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
       transition: transform 0.2s;
+      cursor: pointer;
     }
 
     .company-card:hover {
@@ -85,6 +86,57 @@
       color: #cce3d1;
       font-size: 0.9rem;
       margin-top: 3rem;
+    }
+
+    /* ===== Modal Style ===== */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background-color: white;
+      padding: 2rem;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 500px;
+      position: relative;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+      animation: fadeIn 0.3s ease;
+    }
+
+    .modal-content h3 {
+      color: #1b3d2f;
+      margin-bottom: 1rem;
+    }
+
+    .modal-content p {
+      color: #444;
+      line-height: 1.6;
+    }
+
+    .close {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      font-size: 1.5rem;
+      color: #888;
+      cursor: pointer;
+    }
+
+    .close:hover {
+      color: #000;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
     }
   </style>
 </head>
@@ -138,9 +190,46 @@
   </div>
 </div>
 
+<!-- Popup Modal -->
+<div id="companyModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3 id="modalTitle"></h3>
+    <p id="modalDescription"></p>
+  </div>
+</div>
+
 <footer>
   &copy; 2025 ChunGroups Co., Ltd. สงวนลิขสิทธิ์ทั้งหมด
 </footer>
+
+<script>
+  const modal = document.getElementById("companyModal");
+  const modalTitle = document.getElementById("modalTitle");
+  const modalDescription = document.getElementById("modalDescription");
+  const closeBtn = document.querySelector(".close");
+
+  // เพิ่ม event ให้ทุกการ์ด
+  document.querySelectorAll(".company-card").forEach(card => {
+    card.addEventListener("click", () => {
+      modalTitle.textContent = card.querySelector("h3").textContent;
+      modalDescription.textContent = card.querySelector("p").textContent;
+      modal.style.display = "flex";
+    });
+  });
+
+  // ปิด modal เมื่อคลิกปุ่มกากบาท
+  closeBtn.addEventListener("click", () => {
+    modal.style.display = "none";
+  });
+
+  // ปิด modal เมื่อคลิกนอกกล่อง
+  window.addEventListener("click", (e) => {
+    if (e.target === modal) {
+      modal.style.display = "none";
+    }
+  });
+</script>
 
 </body>
 </html>
